--- a/settings.html
+++ b/settings.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="settings.css">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@500&family=Nunito:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Countdown.css">
+    <link rel="stylesheet" href="sponsor.css">
 </head>
 <body>
   <!-- Settings Container Section -->
@@ -24,7 +25,7 @@
                     </div>
                 </div>
             </div>
-      <div class="homepage-btn" tabindex="0" role="button" onclick="window.location.href='https://www.homepage.com';">
+        <div class="homepage-btn" tabindex="0" role="button" onclick="window.location.href='https://www.homepage.com';">
                 <div class="btn-content">
                     <div class="btn-text">Homepage</div>
                     <img loading="lazy" src="https://cdn.builder.io/api/v1/image/assets/TEMP/b1b25818760ae418fc65201950a4789a0ec8ac2fda6de0813875987aa2851bc4?placeholderIfAbsent=true&apiKey=58fe75c70cbc4db68554bc2ed919fb77" class="btn-icon" alt="" />
@@ -100,6 +101,50 @@
         <button class="reset-btn" tabindex="0" aria-label="Reset countdown">Reset</button>
       </div>
     </div>
+    </div>
+
+  <!-- Sponsor Section -->
+    <div class="sponsors-wrapper">
+      <div class="sponsors-container">
+        <div class="sponsors-header">
+          <h2 class="sponsors-title">Sponsors</h2>
+          <div class="sponsors-indicator" role="presentation">
+            <button class="add-button">
+              Add <span class="add-icon-circle">+</span>
+            </button>
+          </div>
+        </div>
+        <div class="sponsor-content">
+          <div class="sponsor-details">
+            <div class="sponsor-info">
+              <div class="sponsor-profile">
+                <img loading="lazy" src="https://cdn.builder.io/api/v1/image/assets/TEMP/08b2affc9f34db02e12501e58c1a9f2cab900fc28b7c544220a495a6e1c75324?placeholderIfAbsent=true&apiKey=58fe75c70cbc4db68554bc2ed919fb77" alt="Legit Banda company logo" class="sponsor-logo"/>
+                <div class="sponsor-text">
+                  <div class="sponsor-type">Engagement Partner</div>
+                  <div class="sponsor-name">Legit Banda</div>
+                  <a href="https://www.thelegitbanda.com" class="sponsor-link" target="_blank" rel="noopener noreferrer">https://www.thelegitbanda.com</a>
+                </div>
+              </div>
+            </div>
+            <div class="action-buttons">
+              <button class="edit-button" title="Edit">
+                <img
+                  src="https://img.icons8.com/?size=100&id=sIsBGR0HOwfh&format=png&color=FFFFFF"
+                  alt="Edit Icon"
+                  class="action-icon"
+                />
+              </button>
+              <button class="delete-button" title="Delete">
+                <img
+                  src="https://cdn.builder.io/api/v1/image/assets/TEMP/c6c768c86f1a96371256a7b1175fc065d173dd1853135e96862e70b2efee93cb?placeholderIfAbsent=true&apiKey=58fe75c70cbc4db68554bc2ed919fb77"
+                  alt="Delete Icon"
+                  class="action-icon"
+                />
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 </body>
 </html>
